# arknight

./: CMakeLists.txt  Final_Report.md  ForWindows.md  Proposal.md  README.md  README_zh-tw.md  build_log.txt  build_win.bat  extract.sh  imgui.ini  run_preload.bat
PTSD/: CMakeLists.txt
PTSD/cmake/: Dependencies.cmake
PTSD/example/include/Ark/: ArkTypes.hpp
PTSD/example/src/: App.cpp
PTSD/example/src/Ark/: StageLoader.cpp
PTSD/include/Util/: Animation.hpp  Image.hpp
PTSD/src/: config.cpp
PTSD/src/Core/: Context.cpp  Texture.cpp
PTSD/src/Util/: Animation.cpp  Image.cpp  Input.cpp
data/enemy/: 01.json  17.json  21.json  A9.json  B2.json
data/enemy/01/: 01_Attack.apng  01_Attack.webm  01_Attack_flip.apng  01_Die.apng  01_Die.webm  01_Die_flip.apng  01_Idle.apng  01_Idle.webm  01_Move.apng  01_Move.webm  01_Move_flip.apng
data/enemy/02/: 02_Attack.apng  02_Attack.webm  02_Die.apng  02_Die.webm  02_Die_flip.apng  02_Idle.apng  02_Idle.webm  02_Move.apng  02_Move.webm  02_Move_flip.apng
data/enemy/17/: 17_Attack.apng  17_Attack.webm  17_Die.apng  17_Die.webm  17_Idle.apng  17_Idle.webm  17_Move.apng  17_Move.webm
data/enemy/21/: 21_Attack.webm  21_Die.apng  21_Die.webm  21_Idle.webm  21_Move.webm
data/enemy/A9/: A9_Attack.webm  A9_Die.apng  A9_Die.webm  A9_Die_flip.apng  A9_Idle.apng  A9_Idle.webm  A9_Move.apng  A9_Move.webm
data/enemy/B2/: B2_Attack.apng  B2_Attack.webm  B2_Attack_flip.apng  B2_Die.apng  B2_Die.webm  B2_Die_flip.apng  B2_Idle.webm  B2_Move.webm
data/levels/: test.json  tutorial_1.json
data/levels/Operation 1-1/: stage.json
data/levels/Operation 1-2/: stage.json
data/loadingpage/: menu_buttons.json
data/operators/.operators/Bagpipe/: Bagpipe.json
data/operators/.operators/Bagpipe/photo/back/: Bagpipe_Skill_back.webm  Bagpipe_Start_back.webm
data/operators/.operators/Bagpipe/photo/front_flip/: Bagpipe_Die.webm
data/operators/.operators/Myrtle/: Myrtle.json
data/operators/.operators/Myrtle/photo/back/: Myrtle_default_back.webm  Myrtle_skillstart_back.webm
data/operators/.operators/Sniper/: Sniper.json
data/operators/Bagpipe/: Bagpipe.json
data/operators/Bagpipe/photo/: Bagpipe_AttackLoop.webm  Bagpipe_Die.webm
data/operators/Bagpipe/photo/back/: Bagpipe_AttackLoop_back.webm  Bagpipe_Skill_back.webm  Bagpipe_Start_back.webm  Bagpipe_default_back.webm
data/operators/Bagpipe/photo/front/: Bagpipe_AttackLoop.webm  Bagpipe_Die.webm  Bagpipe_Start.webm  Bagpipe_default.webm
data/operators/Bagpipe/photo/front_flip/: Bagpipe_AttackLoop.webm  Bagpipe_Die.webm  Bagpipe_Skill.webm  Bagpipe_Start.webm  Bagpipe_default.webm
data/operators/Block copy/: Block.json
data/operators/Kroos/: Kroos.json
data/operators/Kroos/photo/back/: Kroos_attack_back.webm  Kroos_default_back.webm  Kroos_start_back.webm
data/operators/Kroos/photo/front/: Kroos_attack.webm  Kroos_default.webm  Kroos_die.webm  Kroos_start.webm
data/operators/Myrtle/photo/: Myrtle_die.webm
data/operators/Myrtle/photo/back/: Myrtle_SkillStart_back.apng  Myrtle_attack_back.webm  Myrtle_default_back.webm  Myrtle_skillend_back.apng  Myrtle_skillend_back.webm  Myrtle_skillloop_back.webm  Myrtle_skillstart_back.webm  Myrtle_start_back.webm
data/operators/Myrtle/photo/front/: Myrtle_attack.webm  Myrtle_skillend.apng  Myrtle_skillend.webm  Myrtle_skillstart.webm
data/operators/Myrtle/photo/front_flip/: Myrtle_attack.webm  Myrtle_default.webm  Myrtle_die.webm  Myrtle_skillend.webm  Myrtle_skillloop.webm  Myrtle_skillstart.webm  Myrtle_start.webm
data/operators/Sniper/: Sniper.json
docs/arknightbuilder/: README.md  README_zh-tw.md
include/: App.hpp
include/Ark/: AnimationLoader.hpp  ArkTypes.hpp  GameConstants.hpp  GameLogic.hpp  Renderer.hpp  StageLoader.hpp
src/: App.cpp  Giraffe.cpp  GiraffeText.cpp  main.cpp  preload_main.cpp
src/Ark/: AnimationLoader.cpp  Camera.cpp  EnemySystem.cpp  GameLogic.cpp  OperatorSystem.cpp  Renderer.cpp  StageLoader.cpp
src/Ark/Renderer/: Deploy.cpp  Entities.cpp  Grid.cpp  Hud.cpp  RendererShared.hpp  Scene.cpp
temp_test/: CMakeLists.txt
tools/: generate_flipped_enemies.sh  generate_flipped_front.sh
tools/ark_builder/: README.md  README_zh-tw.md
tools/ark_builder/enemy/: 01.json  02.json
tools/ark_builder/levels/: Operation 1-1  test.json  tutorial_1.json
tools/ark_builder/levels/Operation 1-1/: stage.json
tools/ark_builder/operators/: Sniper.json  Vanguard.json
tools/ark_builder/operators/Bagpipe/: Bagpipe.json
tools/ark_builder/operators/Bagpipe/photo/: Bagpipe_Skill.webm
tools/ark_builder/operators/Myrtle/photo/: Myrtle_default.webm  Myrtle_skillloop.webm  Myrtle_start.webm
tools/ark_builder/src/: calibration_tool.cpp  cli_utils.cpp  cli_utils.hpp  commands.cpp  commands.hpp  enemy_catalog.hpp  json_utils.cpp  json_utils.hpp  main.cpp  menu_calibration_tool.cpp  opening_calibration_tool.cpp  stage.cpp  stage.hpp  types.hpp  validation.cpp  validation.hpp
